[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/InGameUi.gd" type="Script" id=1]
[ext_resource path="res://src/fonts/LD_Font_Label.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/themes/LD51_Theme.tres" type="Theme" id=3]
[ext_resource path="res://src/UI/QuitGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/MainMenuButton.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.337255, 0.329412, 0.329412, 0.552941 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="InGameUi" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="TutorialPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -197.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = SubResource( 1 )

[node name="TutorialText" type="Label" parent="TutorialPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "
 "
autowrap = true

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.203922, 0.247059, 1 )

[node name="Label" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -251.5
margin_top = 90.0
margin_right = 251.5
margin_bottom = 158.0
custom_colors/font_color = Color( 0.807843, 0.584314, 0.0862745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 9
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 2 )
text = "Pause"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
margin_left = 17.0
margin_top = 264.0
margin_right = 205.0
margin_bottom = 383.0

[node name="ContinueButton" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_right = 188.0
margin_bottom = 29.0
text = "Continue"

[node name="RestartButton" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_top = 33.0
margin_right = 188.0
margin_bottom = 62.0
text = "Restart"

[node name="MainMenuButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 66.0
margin_bottom = 95.0

[node name="QuitGame" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 99.0
margin_bottom = 128.0

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
stretch_margin_left = 8

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
margin_left = 16.0
margin_top = 25.0
margin_right = 242.0
margin_bottom = 48.0
value = 30.0
rounded = true

[connection signal="button_up" from="PauseOverlay/VBoxContainer/ContinueButton" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="PauseOverlay/VBoxContainer/RestartButton" to="." method="_on_restart_button_up"]
